
plugins {
    id 'java'
    id 'application'
}

sourceCompatibility = JavaVersion.VERSION_11
targetCompatibility = JavaVersion.VERSION_11

mainClassName = 'jfr.App'
run.jvmArgs += [
        '-Xmx1024m',
        '-Xlog:gc*=debug:file=/tmp/gc.log:utctime,uptime,tid,level:filecount=10,filesize=128m',
        '-XX:+HeapDumpOnOutOfMemoryError',
        '-XX:HeapDumpPath=/tmp/heapdump.hprof',
        '-XX:StartFlightRecording=disk=true,dumponexit=true,filename=/tmp/recording.jfr,maxsize=1024m,maxage=1d,settings=profile,path-to-gc-roots=true'
]
run.args += ['What', 'is', 'your', 'password', 'baby?']
